[bug fix] a weird layout problem of list; it comes from the Markdown parser which inserts unnecessary tags inside the list; as a workaround, just fix the layout itself rather than fixing the parser for now;

--- a/src/main/webapp/styles/custom/fragment-content.css
+++ b/src/main/webapp/styles/custom/fragment-content.css
@@ -53,3 +53,7 @@
 .fragment-content ol ol ol {
     list-style-type: lower-alpha;
 }
+
+.fragment-content li > p {
+    margin: 0px 0px 0px 0px;
+}
